add rock for env package

--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@ scm-1:&nbsp;<a href="cwrap-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="dok-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="env"></a><b>env</b> - Environment setup for Torch<br/>
+</p><blockquote><p>Adds pretty printing and additional path handling to luajit <br/>
+
+<font size="-1"><a href="git://github.com/torch/env.git">latest sources</a> | <a href="https://github.com/torch/env" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="env-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="fex"></a><b>fex</b> - A package for feature extraction in Torch<br/>
 </p><blockquote><p>Provides SIFT and dSIFT modules. <br/>
 
