adding fftw3-ffi

--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@ scm-1:&nbsp;<a href="env-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="ffmpeg-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="fftw3"></a><b>fftw3</b> - A FFI interface to FFTW3<br/>
+</p><blockquote><p> See <a href="http://www.fftw.org" target="_blank">http://www.fftw.org</a> for more details. <br/>
+
+<font size="-1"><a href="git://github.com/soumith/fftw3-ffi.git">latest sources</a> | <a href="https://github.com/soumith/fftw3-ffi" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="fftw3-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="fs"></a><b>fs</b> - File system toolbox<br/>
 </p><blockquote><p><br/>
 
