added rockspec for argcheck

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 
 <table class="main">
 <td class="package">
+<p><a name="argcheck"></a><b>argcheck</b> - Advanced function argument checker<br/>
+</p><blockquote><p> Argcheck allows you to insure arguments given to a function are correct. Checks are compiled beforehand, which guarantees little overheads. <br/>
+
+<font size="-1"><a href="git://github.com/torch/argcheck.git">latest sources</a> | <a href="https://github.com/torch/argcheck" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="argcheck-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="async"></a><b>async</b> - An async framework for Torch (based on LibUV)<br/>
 </p><blockquote><p>Async framework for Torch, based on LibUV. <br/>
 
