adding signal rock

--- a/index.html
+++ b/index.html
@@ -391,6 +391,15 @@ scm-0:&nbsp;<a href="redis-queue-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="sdl2-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="signal"></a><b>signal</b> - A signal processing toolbox for Torch-7<br/>
+</p><blockquote><p> A signal processing toolbox for Torch-7 <br/>
+
+<font size="-1"><a href="git://github.com/soumith/torch-signal.git">latest sources</a> | <a href="https://github.com/soumith/torch-signal" target="_blank">project homepage</a> | License: GPLV3</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="signal-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="sundown"></a><b>sundown</b> - A FFI interface to the Markdown implementation of the Sundown library<br/>
 </p><blockquote><p> <br/>
 
