added cairo + class packages

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@ scm-1:&nbsp;<a href="async-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-0:&nbsp;<a href="buffer-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="cairo"></a><b>cairo</b> - A FFI interface to Cairo Graphics<br/>
+</p><blockquote><p> See <a href="http://cairographics.org" target="_blank">http://cairographics.org</a> for more details. <br/>
+
+<font size="-1"><a href="git://github.com/torch/cairo-ffi.git">latest sources</a> | <a href="https://github.com/torch/cairo-ffi" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="cairo-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="camera"></a><b>camera</b> - A simple wrapper package to give torch access to a webcam<br/>
 </p><blockquote><p>Uses OpenCV on MacOS and video4linux2 on Linux to proved the low level access to the camera hardware. <br/>
 
@@ -74,6 +83,15 @@ scm-0:&nbsp;<a href="buffer-scm-0.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 0-0:&nbsp;<a href="cephes-0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="class"></a><b>class</b> - Class Objects for Lua<br/>
+</p><blockquote><p> Simple object-oriented system for Lua, with classes supporting inheritance. <br/>
+
+<font size="-1"><a href="git://github.com/torch/class.git">latest sources</a> | <a href="https://github.com/torch/class" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="class-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="csv"></a><b>csv</b> - A CSV library, for Torch<br/>
