added rockspec for argcheck 0.5

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <font size="-1"><a href="git://github.com/torch/argcheck.git">latest sources</a> | <a href="https://github.com/torch/argcheck" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-scm-1:&nbsp;<a href="argcheck-scm-1.rockspec">rockspec</a><br/></td></tr>
+scm-1:&nbsp;<a href="argcheck-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a href="argcheck-0.5.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="async"></a><b>async</b> - An async framework for Torch (based on LibUV)<br/>
