--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <table class="main">
 <td class="package">
 <p><a name="argcheck"></a><b>argcheck</b> - Advanced function argument checker<br/>
-</p><blockquote><p> Argcheck allows you to insure arguments given to a function are correct. Checks are compiled beforehand, which guarantees little overheads. <br/>
+</p><blockquote><p>Argcheck generates specific code for checking arguments of a function. This allows complex argument checking (possibly with optional values), with almost no overhead. <br/>
 
 <font size="-1"><a href="git://github.com/torch/argcheck.git">latest sources</a> | <a href="https://github.com/torch/argcheck" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
