--- a/index.html
+++ b/index.html
@@ -463,6 +463,15 @@ scm-1:&nbsp;<a href="torch-scm-1.rockspec">rockspec</a><br/>7.scm-0:&nbsp;<a hre
 1.1.alpha-0:&nbsp;<a href="torchffi-1.1.alpha-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="totem"></a><b>totem</b> - Torch test module<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/akfidjeland/torch-totem.git">latest sources</a> | <a href="https://github.com/akfidjeland/torch-totem" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0-0:&nbsp;<a href="totem-0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="trepl"></a><b>trepl</b> - An embedabble, Lua-only REPL for Torch.<br/>
 </p><blockquote><p>An embedabble, Lua-only REPL for Torch. <br/>
 
