added class-0.5.0-0 rockspec

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ scm-1:&nbsp;<a href="cairo-scm-1.rockspec">rockspec</a><br/></td></tr>
 <font size="-1"><a href="git://github.com/torch/class.git">latest sources</a> | <a href="https://github.com/torch/class" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-scm-1:&nbsp;<a href="class-scm-1.rockspec">rockspec</a><br/></td></tr>
+scm-1:&nbsp;<a href="class-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a href="class-0.5.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="csv"></a><b>csv</b> - A CSV library, for Torch<br/>
