--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ scm-0:&nbsp;<a href="buffer-scm-0.rockspec">rockspec</a><br/></td></tr>
 <font size="-1"><a href="git://github.com/torch/cairo-ffi.git">latest sources</a> | <a href="https://github.com/torch/cairo-ffi" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-scm-1:&nbsp;<a href="cairo-scm-1.rockspec">rockspec</a><br/></td></tr>
+scm-1:&nbsp;<a href="cairo-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a href="cairo-0.5.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="camera"></a><b>camera</b> - A simple wrapper package to give torch access to a webcam<br/>
