--- a/index.html
+++ b/index.html
@@ -283,6 +283,15 @@ scm-1:&nbsp;<a href="gnuplot-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="json-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="logroll"></a><b>logroll</b> - A basic logging library for Lua and Torch.<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/akfidjeland/logroll.git">latest sources</a> | <a href="https://github.com/akfidjeland/logroll.git" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+0-0:&nbsp;<a href="logroll-0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="manifold"></a><b>manifold</b> - A package to manipulate manifolds<br/>
 </p><blockquote><p>A package to manipulate manifolds. <br/>
 
