adding rocks for graph and nngraph

--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@ scm-1:&nbsp;<a href="cwrap-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="dok-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="eex"></a><b>eex</b> - Torch extras from e-Lab<br/>
+</p><blockquote><p>This is a Torch extra package from e-Lab. <br/>
+
+<font size="-1"><a href="git://github.com/e-lab/eex">latest sources</a> | <a href="https://github.com/e-lab/eex" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+1.0-0:&nbsp;<a href="eex-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="env"></a><b>env</b> - Environment setup for Torch<br/>
 </p><blockquote><p>Adds pretty printing and additional path handling to luajit <br/>
 
@@ -227,6 +236,15 @@ scm-1:&nbsp;<a href="gm-scm-1.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="gnuplot-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="graph"></a><b>graph</b> - Graph package for Torch<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/torch/graph">latest sources</a> | <a href="https://github.com/torch/graph" target="_blank">project homepage</a> | License: UNKNOWN</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="graph-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="graphicsmagick"></a><b>graphicsmagick</b> - A wrapper to GraphicsMagick (binary).<br/>
@@ -317,6 +335,15 @@ scm-0:&nbsp;<a href="manifold-scm-0.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="nn-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="nngraph"></a><b>nngraph</b> - This package provides graphical computation for nn library in Torch7.<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/torch/nngraph">latest sources</a> | <a href="https://github.com/torch/nngraph" target="_blank">project homepage</a> | License: UNKNOWN</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="nngraph-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="nnx"></a><b>nnx</b> - A completely unstable and experimental package that extends Torch's builtin nn library<br/>
@@ -461,6 +488,15 @@ scm-1:&nbsp;<a href="signal-scm-1.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="svm"></a><b>svm</b> - Torch-SVM library<br/>
+</p><blockquote><p>Torch-SVM library <br/>
+
+<font size="-1"><a href="git@github.com:koraykv/torch-svm.git">latest sources</a> | <a href="https://github.com/koraykv/torch-svm" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-0:&nbsp;<a href="svm-0.1-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="sys"></a><b>sys</b> - A system library for Torch<br/>
