--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ scm-1:&nbsp;<a href="qttorch-scm-1.rockspec">rockspec</a><br/></td></tr>
 <font size="-1"><a href="git://github.com/jucor/torch-randomkit.git">latest sources</a> | <a href="http://jucor.github.io/torch-randomkit" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-0-0:&nbsp;<a href="randomkit-0-0.rockspec">rockspec</a><br/></td></tr>
+0-1:&nbsp;<a href="randomkit-0-1.rockspec">rockspec</a><br/>0-0:&nbsp;<a href="randomkit-0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="redis-async"></a><b>redis-async</b> - A redis client built off the torch/lua async framework<br/>
