--- a/index.html
+++ b/index.html
@@ -301,6 +301,15 @@ scm-1:&nbsp;<a href="graph-scm-1.rockspec">rockspec</a><br/></td></tr>
 0-0:&nbsp;<a href="logroll-0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="luaforever"></a><b>luaforever</b> - Run a script forever.<br/>
+</p><blockquote><p>Run a script forever. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/luaforever">latest sources</a> | <a href="https://github.com/clementfarabet/luaforever" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="luaforever-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="manifold"></a><b>manifold</b> - A package to manipulate manifolds<br/>
 </p><blockquote><p>A package to manipulate manifolds. <br/>
 
