csv->csvigo renaming package

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@ scm-1:&nbsp;<a href="cairo-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a hre
 scm-1:&nbsp;<a href="class-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a href="class-0.5.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
-<p><a name="csv"></a><b>csv</b> - A CSV library, for Torch<br/>
+<p><a name="csvigo"></a><b>csvigo</b> - A CSV library, for Torch<br/>
 </p><blockquote><p>A CSV read/write library for Torch. <br/>
 
 <font size="-1"><a href="git://github.com/clementfarabet/lua---csv">latest sources</a> | <a href="https://github.com/clementfarabet/lua---csv" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0-0:&nbsp;<a href="csv-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.0-0:&nbsp;<a href="csvigo-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="cunn"></a><b>cunn</b> - Torch CUDA Neural Network Implementation<br/>
