--- a/index.html
+++ b/index.html
@@ -508,6 +508,15 @@ scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.1-0:&nbsp;<a href="sys-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="sys-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="thmap"></a><b>thmap</b> - Map jobs onto th nodes.<br/>
+</p><blockquote><p>Map jobs onto th nodes. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/thmap">latest sources</a> | <a href="https://github.com/clementfarabet/thmap" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="thmap-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="threads"></a><b>threads</b> - A FFI threading system<br/>
 </p><blockquote><p>A LuaJIT-based theading system. Relies on SDL2 threads for portability. Transparent exchange of data between threads is allowed thanks to torch serialization. <br/>
 
