csvigo is on master, not a tagged branch

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ scm-1:&nbsp;<a href="class-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a hre
 <font size="-1"><a href="git://github.com/clementfarabet/lua---csv">latest sources</a> | <a href="https://github.com/clementfarabet/lua---csv" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0-0:&nbsp;<a href="csvigo-1.0-0.rockspec">rockspec</a><br/></td></tr>
+scm-1:&nbsp;<a href="csvigo-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="cunn"></a><b>cunn</b> - Torch CUDA Neural Network Implementation<br/>
