adding rockspec for matio package. This allows to load matlab files into tensors without having matlab on the machine

--- a/index.html
+++ b/index.html
@@ -319,6 +319,15 @@ scm-1:&nbsp;<a href="luaforever-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-0:&nbsp;<a href="manifold-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="matio"></a><b>matio</b> - A FFI interface to MATIO and simple bindings for torch<br/>
+</p><blockquote><p> See <a href="http://matio.sourceforge.net" target="_blank">http://matio.sourceforge.net</a> for more details. <br/>
+
+<font size="-1"><a href="git://github.com/soumith/matio-ffi.torch.git">latest sources</a> | <a href="https://github.com/soumith/matio-ffi.torch" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="matio-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="mattorch"></a><b>mattorch</b> - An interface between Matlab and Torch<br/>
 </p><blockquote><p>A two-way interface between Matlab and Torch. Supports all Matrix types in Matlab, as long as they have an equivalent in Torch. <br/>
 
