--- a/index.html
+++ b/index.html
@@ -337,6 +337,15 @@ scm-1:&nbsp;<a href="matio-scm-1.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="mattorch-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="ncurses"></a><b>ncurses</b> - A lua wrapper for ncurses<br/>
+</p><blockquote><p>A lua wrapper for ncurses <br/>
+
+<font size="-1"><a href="git://github.com/ocallaco/lua-ncurses">latest sources</a> | <a href="https://github.com/ocallaco/lua-ncurses" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="ncurses-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="nn"></a><b>nn</b> - Neural Network package for Torch<br/>
 </p><blockquote><p> <br/>
 
