--- a/index.html
+++ b/index.html
@@ -499,6 +499,15 @@ scm-1:&nbsp;<a href="sdl2-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="signal-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="strict"></a><b>strict</b> - Detect reading of undeclared variables and creating of global variables<br/>
+</p><blockquote><p><br/>
+
+<font size="-1"><a href="git://github.com/fidlej/strict.git">latest sources</a> | <a href="http://github.com/fidlej/strict.git" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+0-0:&nbsp;<a href="strict-0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="sundown"></a><b>sundown</b> - A FFI interface to the Markdown implementation of the Sundown library<br/>
 </p><blockquote><p> <br/>
 
