--- a/index.html
+++ b/index.html
@@ -310,6 +310,15 @@ scm-0:&nbsp;<a href="manifold-scm-0.rockspec">rockspec</a><br/></td></tr>
 1.0-0:&nbsp;<a href="mattorch-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="ncurses"></a><b>ncurses</b> - A lua wrapper for ncurses<br/>
+</p><blockquote><p>A lua wrapper for ncurses <br/>
+
+<font size="-1"><a href="git://github.com/ocallaco/lua-ncurses">latest sources</a> | <a href="https://github.com/ocallaco/lua-ncurses" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="ncurses-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="nn"></a><b>nn</b> - Neural Network package for Torch<br/>
 </p><blockquote><p> <br/>
 
@@ -427,6 +436,15 @@ scm-0:&nbsp;<a href="redis-async-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-0:&nbsp;<a href="redis-queue-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="redis-status"></a><b>redis-status</b> - A system for managing and statusing applications remotely via redis<br/>
+</p><blockquote><p>A system for managing and statusing applications remotely via redis <br/>
+
+<font size="-1"><a href="git://github.com/ocallaco/redis-status">latest sources</a> | <a href="https://github.com/ocallaco/redis-status" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="redis-status-scm-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="restclient"></a><b>restclient</b> - A REST Client.<br/>
 </p><blockquote><p>A client to REST APIs. <br/>
 
@@ -434,6 +452,15 @@ scm-0:&nbsp;<a href="redis-queue-scm-0.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 0.1-0:&nbsp;<a href="restclient-0.1-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="rq-monitor"></a><b>rq-monitor</b> - An ncurses based interface for managing redis-queue workers<br/>
+</p><blockquote><p> An ncurses based interface for managing redis-queue workers <br/>
+
+<font size="-1"><a href="git://github.com/ocallaco/rq-monitor">latest sources</a> | <a href="https://github.com/ocallaco/rq-monitor" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-0:&nbsp;<a href="rq-monitor-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="sdl2"></a><b>sdl2</b> - A FFI interface to SDL2<br/>
@@ -470,6 +497,15 @@ scm-1:&nbsp;<a href="sundown-scm-1.rockspec">rockspec</a><br/></td></tr>
 </blockquote></a></td>
 <td class="version">
 1.1-0:&nbsp;<a href="sys-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="sys-1.0-0.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="thmap"></a><b>thmap</b> - Map jobs onto th nodes.<br/>
+</p><blockquote><p>Map jobs onto th nodes. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/thmap">latest sources</a> | <a href="https://github.com/clementfarabet/thmap" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="thmap-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="threads"></a><b>threads</b> - A FFI threading system<br/>
