rockspec for schedlua.

--- a/index.html
+++ b/index.html
@@ -499,6 +499,15 @@ scm-0:&nbsp;<a href="redis-status-scm-0.rockspec">rockspec</a><br/></td></tr>
 scm-0:&nbsp;<a href="rq-monitor-scm-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="schedlua"></a><b>schedlua</b> - A basic scheduler<br/>
+</p><blockquote><p>A basic scheduler. <br/>
+
+<font size="-1"><a href="git://github.com/clementfarabet/schedlua">latest sources</a> | <a href="https://github.com/clementfarabet/schedlua" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="schedlua-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="sdl2"></a><b>sdl2</b> - A FFI interface to SDL2<br/>
 </p><blockquote><p> See <a href="http://libsdl.org" target="_blank">http://libsdl.org</a> for more details. <br/>
 
