--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ scm-1:&nbsp;<a href="nngraph-scm-1.rockspec">rockspec</a><br/></td></tr>
 <font size="-1"><a href="git://github.com/torch/optim">latest sources</a> | <a href="https://github.com/torch/optim" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0.4-0:&nbsp;<a href="optim-1.0.4-0.rockspec">rockspec</a><br/>1.0.3-1:&nbsp;<a href="optim-1.0.3-1.rockspec">rockspec</a><br/>1.0.3-0:&nbsp;<a href="optim-1.0.3-0.rockspec">rockspec</a><br/></td></tr>
+1.0.5-0:&nbsp;<a href="optim-1.0.5-0.rockspec">rockspec</a><br/>1.0.4-0:&nbsp;<a href="optim-1.0.4-0.rockspec">rockspec</a><br/>1.0.3-1:&nbsp;<a href="optim-1.0.3-1.rockspec">rockspec</a><br/>1.0.3-0:&nbsp;<a href="optim-1.0.3-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="parallel"></a><b>parallel</b> - A package to easily fork processes, for Torch<br/>
