--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ scm-1:&nbsp;<a href="csvigo-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="cunn-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
-<p><a name="cunnx"></a><b>cunnx</b> - Torch CUDA Experimental Neural Network Implementation<br/>
-</p><blockquote><p> <br/>
+<p><a name="cunnx"></a><b>cunnx</b> - Torch CUDA Experimental Neural Network Modules<br/>
+</p><blockquote><p>The CUDA analog of nnx. Also contains some CUDA-only modules.<br/>
 
 <font size="-1"><a href="git://github.com/nicholas-leonard/cunnx.git">latest sources</a> | <a href="https://github.com/nicholas-leonard/cunnx" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
