--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@ scm-1:&nbsp;<a href="cwrap-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="dok-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="dp"></a><b>dp</b> - A deep learning library for the Torch7 distribution<br/>
+</p><blockquote><p>With an emphasis on flexibility through the elegant use of object-oriented design patterns, dp is a deep learning library inspired by pylearn2 designed for streamlining research and development using the Torch7 distribution. <br/>
+
+<font size="-1"><a href="https://github.com/nicholas-leonard/dp">latest sources</a> | <a href="https://github.com/nicholas-leonard/dp/blob/master/README.md" target="_blank">project homepage</a> | License: N/A</font></p>
+</blockquote></a></td>
+<td class="version">
+scm-1:&nbsp;<a href="dp-scm-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="eex"></a><b>eex</b> - Torch extras from e-Lab<br/>
 </p><blockquote><p>This is a Torch extra package from e-Lab. <br/>
 
