newer parallel rockspec

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ scm-1:&nbsp;<a href="nngraph-scm-1.rockspec">rockspec</a><br/></td></tr>
 <font size="-1"><a href="git://github.com/clementfarabet/lua---parallel">latest sources</a> | <a href="https://github.com/clementfarabet/lua---parallel" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0-0:&nbsp;<a href="parallel-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.1-0:&nbsp;<a href="parallel-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="parallel-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="paths"></a><b>paths</b> - Paths manipulations<br/>
