--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ scm-1:&nbsp;<a href="cairo-scm-1.rockspec">rockspec</a><br/>0.5.0-0:&nbsp;<a hre
 <font size="-1"><a href="git://github.com/clementfarabet/lua---camera">latest sources</a> | <a href="https://github.com/clementfarabet/lua---camera" target="_blank">project homepage</a> | License: BSD</font></p>
 </blockquote></a></td>
 <td class="version">
-1.0-0:&nbsp;<a href="camera-1.0-0.rockspec">rockspec</a><br/></td></tr>
+1.1-0:&nbsp;<a href="camera-1.1-0.rockspec">rockspec</a><br/>1.0-0:&nbsp;<a href="camera-1.0-0.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
 <p><a name="cephes"></a><b>cephes</b> - Cephes mathematical functions library, wrapped for Torch<br/>
