adding Facebook rockspecs

--- a/index.html
+++ b/index.html
@@ -175,6 +175,78 @@ scm-1:&nbsp;<a href="dok-scm-1.rockspec">rockspec</a><br/></td></tr>
 scm-1:&nbsp;<a href="env-scm-1.rockspec">rockspec</a><br/></td></tr>
 <tr><td colspan="2" class="spacer"></td></tr>
 <td class="package">
+<p><a name="fbdebugger"></a><b>fbdebugger</b> - FB Lua Debugger<br/>
+</p><blockquote><p> This is a general-purpose debugger for Lua. Its command syntax is inspired by gdb, and it has special support for printing Torch tensors (but Torch is not required). Requires LuaJIT 2.0+. <br/>
+
+<font size="-1"><a href="https://github.com/facebook/fblualib">latest sources</a> | <a href="https://github.com/facebook/fblualib" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-1:&nbsp;<a href="fbdebugger-0.1-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="fbeditline"></a><b>fbeditline</b> - FB bindings for editline<br/>
+</p><blockquote><p> XXX <br/>
+
+<font size="-1"><a href="https://github.com/facebook/fblualib">latest sources</a> | <a href="https://github.com/facebook/fblualib" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-1:&nbsp;<a href="fbeditline-0.1-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="fbluaunit"></a><b>fbluaunit</b> - FB Lua Debugger<br/>
+</p><blockquote><p> FB fork of LuaUnit. <br/>
+
+<font size="-1"><a href="https://github.com/facebook/fblualib">latest sources</a> | <a href="https://github.com/facebook/fblualib" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-1:&nbsp;<a href="fbluaunit-0.1-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="fbmattorch"></a><b>fbmattorch</b> - FB API to read Matlab files<br/>
+</p><blockquote><p> XXX <br/>
+
+<font size="-1"><a href="https://github.com/facebook/fblualib">latest sources</a> | <a href="https://github.com/facebook/fblualib" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-1:&nbsp;<a href="fbmattorch-0.1-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="fbpython"></a><b>fbpython</b> - FB Lua - Python Bridge<br/>
+</p><blockquote><p> XXX <br/>
+
+<font size="-1"><a href="https://github.com/facebook/fblualib">latest sources</a> | <a href="https://github.com/facebook/fblualib" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-1:&nbsp;<a href="fbpython-0.1-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="fbthrift"></a><b>fbthrift</b> - FB Thrift Lua Serialization<br/>
+</p><blockquote><p> XXX <br/>
+
+<font size="-1"><a href="https://github.com/facebook/fblualib">latest sources</a> | <a href="https://github.com/facebook/fblualib" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-1:&nbsp;<a href="fbthrift-0.1-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="fbtrepl"></a><b>fbtrepl</b> - FB Basic Lua Utilities<br/>
+</p><blockquote><p> XXX <br/>
+
+<font size="-1"><a href="https://github.com/facebook/fblualib">latest sources</a> | <a href="https://github.com/facebook/fblualib" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-1:&nbsp;<a href="fbtrepl-0.1-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
+<p><a name="fbutil"></a><b>fbutil</b> - FB Basic Lua Utilities<br/>
+</p><blockquote><p> XXX <br/>
+
+<font size="-1"><a href="https://github.com/facebook/fblualib">latest sources</a> | <a href="https://github.com/facebook/fblualib" target="_blank">project homepage</a> | License: BSD</font></p>
+</blockquote></a></td>
+<td class="version">
+0.1-1:&nbsp;<a href="fbutil-0.1-1.rockspec">rockspec</a><br/></td></tr>
+<tr><td colspan="2" class="spacer"></td></tr>
+<td class="package">
 <p><a name="fex"></a><b>fex</b> - A package for feature extraction in Torch<br/>
 </p><blockquote><p>Provides SIFT and dSIFT modules. <br/>
 
